# duckdb-sqlite

./: .gitignore  CMakeLists.txt  Makefile  README.md  extension_config.cmake
.github/workflows/: MainDistributionPipeline.yml
data/db/: accounts_sample.db  unsupported_view.db
src/: sqlite_db.cpp  sqlite_extension.cpp  sqlite_scanner.cpp  sqlite_stmt.cpp
src/include/: sqlite_db.hpp  sqlite_scanner.hpp  sqlite_stmt.hpp
src/include/storage/: sqlite_catalog.hpp  sqlite_schema_entry.hpp
src/storage/: CMakeLists.txt  sqlite_catalog.cpp  sqlite_delete.cpp  sqlite_index.cpp  sqlite_insert.cpp  sqlite_query.cpp  sqlite_schema_entry.cpp  sqlite_table_entry.cpp  sqlite_transaction.cpp  sqlite_update.cpp
test/sql/storage/: attach_copy_index.test  attach_create_index.test  attach_debug_print_unharmful.test  attach_describe.test  attach_index_expressions.test  attach_schema_functions.test  attach_show_tables.test  attach_sqlite_query.test  attach_sqlite_view.test  attach_transactions.test
