cmake_minimum_required(VERSION 3.5...3.29)
set(TARGET_NAME sqlite_scanner)
set(EXTENSION_NAME ${TARGET_NAME}_extension)
project(${TARGET_NAME})

include_directories(src/sqlite)

add_subdirectory(src)
set(EXTENSION_OBJECT_FILES ${ALL_OBJECT_FILES})
add_library(${EXTENSION_NAME} STATIC ${EXTENSION_OBJECT_FILES})

set(PARAMETERS "-warnings")
build_loadable_extension(${TARGET_NAME} ${PARAMETERS} ${EXTENSION_OBJECT_FILES})

if(DUCKDB_INSTALL)
	install(
	  TARGETS ${EXTENSION_NAME}
	  EXPORT "${DUCKDB_EXPORT_SET}"
	  LIBRARY DESTINATION "${INSTALL_LIB_DIR}"
	  ARCHIVE DESTINATION "${INSTALL_LIB_DIR}")
endif()
